# Realtime-CineFollow-Gimbal

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
apps/: main.cpp
assets/3d_models/: iris_base_mount.step  iris_pitch_camera_plate.step  iris_pitch_motor_bracket.step  iris_yaw_arm.step
docs/: UART_Protocol.md  technical report.docx
include/comm/: SerialPort.h
pico/: .gitignore  CMakeLists.txt
pico/Pico-firmware/: CMakeLists.txt
pico/Pico-firmware/SimpleFOC_Core/common/: time_utils.cpp
pico/Pico-firmware/include/: Arduino.h  Motor.h  UART_Parser.h  protocol_def.h
pico/Pico-firmware/src/: Motor.cpp  PicoDriver3PWM.cpp  UART_Parser.cpp  main.cpp
pico/include/: Arduino.h  Motor.h  PicoDriver3PWM.h  UART_Parser.h  protocol_def.h
pico/src/: Motor.cpp  PicoDriver3PWM.cpp  UART_Parser.cpp  main.cpp  main.txt
rpi_app/: CMakeLists.txt
rpi_app/include/comm/: SerialPort.h  UartDriver.h  protocol_def.h
rpi_app/include/control/: TrajectoryPlanner.h
rpi_app/include/utils/: SharedState.h
rpi_app/include/vision/: VisionNode.h  YoloDetector.h  libcam2opencv.h  libcam2opencv_format_converter.h
rpi_app/models/: yolov8n-pose.param
rpi_app/src/: libcam2opencv.cpp  libcam2opencv_format_converter.cpp  main.cpp
rpi_app/src/vision/: YoloDetector.cpp
src/ui/: ButtonEvent.hpp  ButtonLogic.cpp  ButtonLogic.hpp  ConsoleDisplay.cpp  ConsoleDisplay.hpp  DisplayModel.hpp  IDisplay.hpp  Mode.hpp  ModeController.hpp  ModeManager.cpp  ModeManager.hpp  Ssd1306Display.cpp  Ssd1306Display.hpp  ui_demo.cpp
tests/: test_console  test_console.cpp  test_latency.cpp  test_latency_edge.cpp  test_util.hpp
